--- a/.env
+++ b/.env
@@ -1,1 +1,1 @@
-OPENAI_API_KEY=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
+OPENAI_API_KEY="your_api_key_here"
